# python-web-app

./: .gitignore  index.html  main.py  package-lock.json  package.json  pyproject.toml
static/: main.js
