[tool.poetry]
name = "python-web-app"
version = "0.1.0"
description = ""
authors = ["UbuntuKosuke <Ubuntu.Kosuke@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.13"
fastapi = "0.81.0"
uvicorn = "0.18.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
